tests/NormalTests/paczka1/fuzzy1/77797822.err
Error in line 4: lysvNu1Idb A375 46,7
Error in line 23: A375 A286 172,7
Error in line 36: jL2 A286 55,4
